Version 4.2-3

  o Import version >= 1.4.1 of estimability to avoid bug in version 1.4.0 (suggestion of Russell Lenth).
  
  o Added levels2dates(), with "eff" and "effpoly" methods, for limited support for plotting "Date" objects (request of Christoph Scherber).
  
  o Update \link{}s in .Rd files to adhere to new rules.
  
  o Various small updates to conform to R/CRAN rules.
  
Version 4.2-2

 o Added warning or note about unestimable effects.
 
 o More robust computation of residual df in Effect.lm(), to accommodate broader classes of models.
 
 o Insure that factor levels of focal predictor are in proper order bug (reported by Christoph Scherber) didn't visibly affect plots or tables, just order of levels in returned factor.
 
 o Functions supported by effects vignette rewritten (and renamed).


Version 4.2-1

 o Allow the vcov. argument in the call to one of the effect methods to be a matrix or a function.  Previously only a function was permitted.
 
 o Fixed bug in plot.eff() for multiline plots in which the x.var argument is set explicitly (reported by Gerrit Eichner).
 
 o Small improvements to docs.

Version 4.2-0

 o Adding the use of the insight package to get formulas.
 
 o Added Effect.glmmPQL() for fitting generalized linear mixed models using the glmmPQL() function in the MASS package for penalized quasi-likelihood estimation.
 
 o Don't ignore lines lty sub-argument to plot.effpoly() (fixing a bug reported by Laura Adamovicz).
 
 o One-column matrix predictors trigger a warning and correction (following problem reported by Carla Hendricks).
 
 o Added regression tests for classes of model objects supported. Tests must be enabled in the effects sources at tests/regression-tests.R.
 
 o Rewrite of defining effect method vignette.
 
 o Minor changes to predictor effects gallery vignette.

Version 4.1-4

 o Change class(x) == "y" to inherits(x, "y") in code.

Version 4.1-3
